# graph-drawing-solver

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
benchmark_sets/: contest_old.txt  core_medium.txt  core_small.txt  gdt_official_small.txt  smoke.txt
docs/: ALGORITHM.md  EVALUATION.md
examples/: cube_q3.json  grid_4x4.json
instances_converted/adversarial/: bipartite_10_10.json  bipartite_5_5.json  bipartite_8_8.json  bipartite_near_complete_7_7.json  bipartite_unbalanced_3_12.json  bipartite_unbalanced_5_15.json  circular_violation_16.json  circular_violation_20.json  circular_violation_24.json  clique_cluster_3x5_dense.json  clique_cluster_4x4_dense.json  clique_cluster_5x3_dense.json  complete_k10.json  complete_k15.json  complete_k20.json  dense_adv_15_p70.json  dense_adv_20_p60.json  hub_star_12_very_dense.json  hub_star_15_dense.json  hub_star_20_medium.json  layered_conflict_3x4.json  layered_conflict_4x3.json  layered_conflict_5x3.json  nested_cycles_3x8.json  nested_cycles_4x6.json  turan_12_4.json  turan_15_3.json  turan_18_3.json
instances_converted/contest_old/: instance_1.json  instance_2.json  instance_3.json  instance_4.json  instance_5.json  instance_6.json  instance_7.json  instance_8.json
instances_converted/random/: large_sparse.json  medium_dense.json  medium_sparse.json  small_dense.json  small_sparse.json
instances_converted/rome/: rome_g10_e12.json  rome_g15_e20.json  rome_g20_e30.json  rome_g25_e40.json  rome_g30_e50.json
instances_converted/rome_real/: 00000_GDT-testsuite-CD.tgz_ALF_CD_graphswith10nodes_ug13.10_n10_m9.json  00001_GDT-testsuite-CD.tgz_ALF_CD_graphswith20nodes_ug53.20_n20_m19.json  00002_GDT-testsuite-CD.tgz_ALF_CD_graphswith30nodes_ug28.30_n30_m31.json  00003_GDT-testsuite-CD.tgz_ALF_CD_graphswith40nodes_ug34.40_n40_m42.json  00004_GDT-testsuite-CD.tgz_ALF_CD_graphswith50nodes_ug12.50_n50_m54.json  00005_GDT-testsuite-CD.tgz_ALF_CD_graphswith60nodes_ug10.60_n60_m69.json  00006_GDT-testsuite-CD.tgz_ALF_CD_graphswith70nodes_ug59.70_n70_m78.json  00007_GDT-testsuite-BDPB.tgz_RND_BDPB_graphswith80nodes_ug12.80_n80_m92.json  00008_GDT-testsuite-BDPB.tgz_RND_BDPB_graphswith90nodes_ug14.90_n90_m101.json  00009_GDT-testsuite-BDPB.tgz_RND_BDPB_graphswith100nodes_ug11.100_n100_m112.json
instances_converted/structured/: cycle_chords20.json  grid_4x5.json  tree_depth5.json
results/: best_store_keep.json  checkpointed_sa_resume.json  checkpointed_sa_rome_g15_e20.json  fixed_nodes_circular_preserve.json  fixed_nodes_fr_preserve.json  fixed_nodes_grid_preserve.json  fixed_nodes_roundtrip.json  fixed_nodes_sa_preserve.json  fixed_nodes_submission.json  repaired_duplicate_coordinates.json  rome_real.csv  rome_real_summary.csv  sa_index_rome_g15_e20.json  validation_valid_output.json
scripts/: run_compare_examples.sh
scripts/benchmarks/: _k_of.py  run_benchmark_set.sh  run_contest_skeleton_benchmark.sh  run_core_benchmarks.sh  run_experiments.sh  run_fmmm_portfolio.sh  run_multistart_benchmarks.sh  run_ogdf_experiments.sh  run_real_benchmarks.sh  run_solver_alone_3seed.sh  smoke_fmmm_portfolio.sh
scripts/conversion/: convert_edgelist_to_json.py  import_gdt_testsuite_tgz.py  import_rome_graphml_tgz.py  normalize_contest_json.py
scripts/plots/: plot_benchmark_results.py  visualize_graph_layout.py
scripts/summaries/: compare_ogdf_vs_solver.py  summarize_experiments.py  summarize_experiments_by_budget.py  summarize_ogdf_experiments.py  summarize_runtime_scaling.py  summarize_sa_ablation.py
scripts/tests/: run_adaptive_contest_runner_tests.sh  run_all_tests.sh  run_best_solution_store_tests.sh  run_checkpoint_tests.sh  run_checkpointed_sa_tests.sh  run_contest_runner_tests.sh  run_crossing_tests.sh  run_delta_tests.sh  run_fixed_node_tests.sh  run_incremental_index_tests.sh  run_preprocessing_tests.sh  run_repair_tests.sh  run_sa_index_tests.sh  run_timeboxed_contest_runner_tests.sh  run_validation_tests.sh
src/apps/: best_solution_store_probe.cpp  checkpoint_probe.cpp  checkpointed_sa_probe.cpp  contest_runner_adaptive_probe.cpp  contest_runner_probe.cpp  contest_runner_timeboxed_probe.cpp  crossing_delta_probe.cpp  incremental_crossing_index_probe.cpp  leaf_reducer_probe.cpp  leaf_reinsertion_probe.cpp  main.cpp  ogdf_layout.cpp  ogdf_probe.cpp
src/checkpoint/: BestSolutionStore.cpp  BestSolutionStore.hpp  CheckpointStore.cpp  CheckpointStore.hpp
src/domain/: Graph.hpp
src/geometry/: CrossingCounter.cpp  CrossingCounter.hpp  CrossingStatistics.cpp  CrossingStatistics.hpp  Geometry.cpp  Geometry.hpp
src/io/: JsonReader.cpp  JsonReader.hpp  JsonWriter.cpp  JsonWriter.hpp
src/layout/: BaselineLayouts.cpp  BaselineLayouts.hpp  FruchtermanReingoldLayout.cpp  FruchtermanReingoldLayout.hpp
src/optimization/: CrossingDelta.cpp  CrossingDelta.hpp  IncrementalCrossingIndex.cpp  IncrementalCrossingIndex.hpp  SimulatedAnnealingOptimizer.cpp  SimulatedAnnealingOptimizer.hpp
src/preprocessing/: LeafReducer.cpp  LeafReducer.hpp  LeafReinserter.cpp  LeafReinserter.hpp
src/scoring/: LayoutScore.cpp  LayoutScore.hpp
testdata/: collinear_overlap.json  delta_move_simple.json  disconnected_components.json  fixed_nodes_layout_preserve.json  fixed_nodes_simple.json  invalid_duplicate_coordinates.json  invalid_vertex_on_edge.json  k4_convex.json  leaf_reduction_star.json  no_crossing_2_edges.json  one_crossing_2_edges.json  shared_endpoint_no_crossing.json  square_diagonals_one_crossing.json  triangle_no_crossing.json
(+4 files in other folders)
